chore: implement succeedIdentityAttribute endpoint and openapi spec
